--- a/.htaccess
+++ b/.htaccess
@@ -4,7 +4,7 @@ Options FollowSymLinks
 FileETag none
 
 RewriteEngine On
-RewriteBase  /couch  
+RewriteBase  /slipcover  
 
 php_flag magic_quotes_gpc off
 
